--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
   <meta charset="utf-8">
 
   <title>Brainfuck interpreter</title>
-
+  
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="bower_components/codemirror/theme/monokai.css">
-  <script src="bower_components/codemirror/lib/codemirror.js"></script>
-  <script src="node_modules/brainfuck-compiler/lib/brainfuck.js"></script>
-
-  <!-- angular -->
-  <script src="node_modules/angular/angular.min.js"></script>
-  <script src="bower_components/angular-ui-codemirror/ui-codemirror.min.js"></script>
 
   <!-- app -->
-  <link rel="stylesheet" href="app.css">
-  <script src="js/app.js"></script>
+  <!-- <link rel="stylesheet" href="app.css"> -->
+  
+  <script src="dist/vendor.js"></script>
+  <script src="dist/scripts.js"></script>
 
 </head>
 
 <body>
-  <div ng-app="bi" ng-controller="mainCtrl">
+  <div class="wrapper container" ng-app="bi" ng-controller="mainCtrl">
+
     <div class="row">
       <div class="col-lg-12">
         <div ng-include="'tpl/header.html'"></div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-lg-12">
         <div ng-include="'tpl/editor.html'"></div>
       </div>
+      
       <!-- <div class="col-lg-4">
         <div ng-include="'tpl/memory.html'"></div>
       </div> -->
     </div>
+
   </div>
 </body>
 </html>
