--- a/tpl/editor.html
+++ b/tpl/editor.html
@@ -1,29 +1,28 @@
 
 <div ui-codemirror ui-codemirror-opts="editorOptions" ng-model="ref.code"></div>
 
-<div class="row">
-  <div class="col-lg-8">
-    <div class="row">
-      <div class="col-md-2">
-        <label>Input</label>
-      </div>
-      <div class="col-md-10">
-        <input type="text" class="form-control" ng-model="ref.input"/>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="btn-toolbar pull-right">
+
+<!--       <input type="text" class="form-control" ng-model="ref.input" />
+
+    <div class="input-group pull-right">
       <button type="button" class="btn btn-danger" ng-click="clean()">Clean</button>
       <button type="button" class="btn btn-success" ng-click="run()">Run</button>
     </div>
-  </div>
+ -->
+
+
+<div class="input-group">
+  <input type="text" class="form-control" placeholder="Input" ng-model="ref.input">
+  <span class="input-group-btn">
+    <button type="button" class="btn btn-danger" ng-click="clean()">Clean</button>
+    <button type="submit" class="btn btn-success" ng-click="run()">Run</button>
+  </span>
 </div>
+
 
 <div class="row">
   <div class="col-lg-12">
     <label>Output</label>
     <pre>{{ref.output}}</pre>
-    </textarea>
   </div>
 </div>
