build vendor css files

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 
   <title>Brainfuck interpreter</title>
   
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/codemirror/lib/codemirror.css">
-  <link rel="stylesheet" href="bower_components/codemirror/theme/monokai.css">
+  <!-- vendor -->
+  <script src="dist/vendor.js"></script>
+  <link rel="stylesheet" href="dist/vendor.css">
 
   <!-- app -->
-  <!-- <link rel="stylesheet" href="app.css"> -->
-  
-  <script src="dist/vendor.js"></script>
   <script src="dist/scripts.js"></script>
 
 </head>
