added webworkers support

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="dist/vendor.css">
 
   <!-- app -->
-  <script src="dist/scripts.js"></script>
+  <script src="dist/app.js"></script>
 
 </head>
 
