--- a/tpl/editor.html
+++ b/tpl/editor.html
@@ -1,5 +1,4 @@
 
-
 <div class="row">
   <div class="col-lg-6">
     <div ng-include="'tpl/header.html'"></div>
@@ -19,14 +18,6 @@
 
 <div ui-codemirror ui-codemirror-opts="editorOptions" ng-model="ref.code"></div>
 
-<!--       <input type="text" class="form-control" ng-model="ref.input" />
-
-    <div class="input-group pull-right">
-      <button type="button" class="btn btn-danger" ng-click="clean()">Clean</button>
-      <button type="button" class="btn btn-success" ng-click="run()">Run</button>
-    </div>
- -->
-
 <div class="input-group">
   <input type="text" class="form-control" placeholder="Input" ng-model="ref.input">
   <span class="input-group-btn">
@@ -40,7 +31,7 @@
   <div class="col-lg-12">
     <label>
       Output
-      <span ng-show=" "> (processing…)</span>
+      <span ng-show="ref.processing"> (processing…)</span>
     </label>
     <pre>{{ref.output}}</pre>
   </div>
